--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <section class="col-12 d-flex justify-content-end">
         <div class="form-group">
           <a name="" id="openCart" onclick="openCart()" class="btn btn-default" href="#" role="button" data-toggle="modal" data-target="#exampleModal"><i class="fa-solid fa-cart-shopping"></i></a>
-          <a name="" id="" class="btn btn-primary" href="admin.html" role="button">Admin</a>
+          <a name="" id="" class="btn btn-primary" href="./src/view/admin.html" role="button">Admin</a>
           <select
             class="form-control"
             name="phoneType"
@@ -196,6 +196,6 @@
     <!-- ! Main script -->
     <script
       type="module"
-      src="../controllers/main.js"></script>
+      src="./src/controllers/main.js"></script>
   </body>
 </html>
