--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       referrerpolicy="no-referrer" />
     <link
       rel="stylesheet"
-      href="../../assets/css/style.css" />
+      href="./assets/css/style.css" />
   </head>
   <body style="overflow-x: hidden;">
     <!-- TODO: Navbar tren cung them lop container -->
